fixed overflow for playlists

--- a/react-app/src/components/Post/PostDetails/PostDetails.css
+++ b/react-app/src/components/Post/PostDetails/PostDetails.css
@@ -205,7 +205,7 @@
 .onepost-playlisticon {
   position: absolute;
   top: -12px;
-  right: 94px;
+  right: 32px;
 }
 
 .onepost-creatorimage {
